@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: gmt_init.c,v 1.380 2009-03-31 19:00:46 remko Exp $
+ *	$Id: gmt_init.c,v 1.381 2009-04-09 23:39:16 guru Exp $
  *
  *	Copyright (c) 1991-2009 by P. Wessel and W. H. F. Smith
  *	See COPYING file for copying and redistribution conditions.
@@ -5516,8 +5516,8 @@ void GMT_init_scales (int unit, double *fwd_scale, double *inv_scale, double *in
 
 	scales[0] = 1.0;		/* m in m */
 	scales[1] = 1000.0;		/* m in km */
-	scales[2] = 1609.334;		/* m in miles */
-	scales[3] = 1852.0;		/* m in nautical miles */
+	scales[2] = METERS_IN_A_MILE;		/* m in miles */
+	scales[3] = METERS_IN_A_NAUTICAL_MILE;	/* m in nautical miles */
 	scales[4] = 0.0254;		/* m in inch */
 	scales[5] = 0.01;		/* m in cm */
 	scales[6] = 0.0254 / 72.0;	/* m in points */
